# upstage-gangwon

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy-calender-version.yml  deploy-container.yml  deploy-version.yml
app/api/route/: agent_routers.py  user_routers.py
app/core/: db.py  settings.py
app/repository/: vector_repo.py
app/repository/client/: upstage_client.py
app/service/: agent_service.py  embedding_service.py  user_service.py  vector_service.py
infra/chroma/: docker-compose.yml
infra/k8s/application/: 03-chromadb.yaml  04-backend.yaml  05-ingress.yaml  06-backend-svc-lb.yaml  README.md
infra/k8s/monitor/: ingress.yaml
infra/k8s/start/: nginx-deployment.yaml
test/: test_agent.py
tests/: test_easy.py
